fix(theme): fix navbar actions on mobile

--- a/packages/theme/src/client/module/outlook/styles/outlook-button.scss
+++ b/packages/theme/src/client/module/outlook/styles/outlook-button.scss
@@ -8,10 +8,6 @@
   padding: 6px;
   color: var(--dark-grey);
 
-  @media (max-width: hope-config.$mobile) {
-    display: none;
-  }
-
   &:hover,
   &.open {
     .outlook-dropdown {
